tests/wordpress/fail/plugins/adminimize/adminimize.php
<?php
/**
 * @package Adminimize
 * @author Frank Bültge
 */
 
/*
Plugin Name: Adminimize
Plugin URI: http://bueltge.de/wordpress-admin-theme-adminimize/674/
Text Domain: adminimize
Domain Path: /languages
Description: Visually compresses the administratrive meta-boxes so that more admin page content can be initially seen. The plugin that lets you hide 'unnecessary' items from the WordPress administration menu, for alle roles of your install. You can also hide post meta controls on the edit-area to simplify the interface. It is possible to simplify the admin in different for all roles.
Author: Frank B&uuml;ltge
Author URI: http://bueltge.de/
Version: 1.7.21
License: GPLv2
*/
